# libjson

./: CMakeLists.txt  README.md  package.json
include/: json.h
src/: json.c
test/: CMakeLists.txt  decode-utf8-array-empty.c  decode-utf8-array.c  decode-utf8-false.c  decode-utf8-null.c  decode-utf8-number.c  decode-utf8-object-empty.c  decode-utf8-object.c  decode-utf8-string-empty.c  decode-utf8-string-escape.c  decode-utf8-string.c  decode-utf8-true.c
